Bug 408387 - Cannot manually start new Instance
Summary: Cannot manually start new Instance
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: VHI grave
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-06 16:08 UTC by Nate Graham
Modified: 2019-06-22 13:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.08.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2019-06-06 16:08:41 UTC
STEPS TO REPRODUCE
1. Open Dolphin
2. Right-click on Dolphin's Task Manager Entry and click "Start New Instance"


OBSERVED RESULT
Nothing happens


EXPECTED RESULT
A new instance is created


SOFTWARE/OS VERSIONS
Everything from git master
Comment 1 Nate Graham 2019-06-06 16:08:59 UTC
See also Bug 408244.
Comment 2 Nate Graham 2019-06-22 13:47:12 UTC
Git commit d2506ffa63812fd0d8e9de248d7f3dd94ec2bf38 by Nate Graham, on behalf of Alexander Saoutkin.
Committed on 22/06/2019 at 13:47.
Pushed by ngraham into branch 'master'.

Open new instance of Dolphin if no URLs are given

Summary:
Related: bug 408244
FIXED-IN: 19.08.0

Currently Dolphin only opens a new instance of itself in the following two scenarios:
1. No other Dolphin instances ( D21666 deals with not matching daemonized instances) are currently running.
2. A new instance is explicitly asked for via:  `dolphin --new-window`

A third scenario is needed to fix this bug:
3. If no URLs are passed in as arguments then open a new instance.

This patch adds this third scenario.

Test Plan:
STEPS TO REPRODUCE
1. Open Dolphin
2. Right-click on Dolphin's Task Manager Entry and click "Start New Instance"
3. A new instance is created.

As my system stuff is not built on master I am unable to replicate the bug (and can't confirm whether this fixes it), hence I'll rely on @ngraham to confirm whether this patch fixes the issue.

Reviewers: ngraham, elvisangelaccio

Reviewed By: ngraham, elvisangelaccio

Subscribers: elvisangelaccio, ngraham, kfm-devel

Tags: #dolphin

Differential Revision: https://phabricator.kde.org/D21691

M  +2    -2    src/global.cpp
M  +5    -5    src/main.cpp

https://commits.kde.org/dolphin/d2506ffa63812fd0d8e9de248d7f3dd94ec2bf38